Improve Entity design & Implement Journey Resource.
