# src/main/java/in/guidable/controllers/RoadmapController.java
@@ -1,14 +1,12 @@
 package in.guidable.controllers;
 
 import in.guidable.api.RoadmapsApi;
-import in.guidable.jwt.JwtUtil;
 import in.guidable.model.CreateRoadmapDetail;
-import in.guidable.model.CreateRoadmapResponse;
+import in.guidable.model.RoadmapResponse;
 import in.guidable.model.UpdateRoadmapDetail;
 import in.guidable.services.RoadmapService;
 import in.guidable.util.AuthenticationUtil;
 import lombok.RequiredArgsConstructor;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.*;
@@ -19,45 +17,46 @@ import java.util.List;
 @RequiredArgsConstructor
 public class RoadmapController implements RoadmapsApi {
 
-    private  final JwtUtil jwtUtil;
     private final RoadmapService roadmapService;
-    private  final AuthenticationUtil authUtil;
+    private  final AuthenticationUtil authenticationUtil;
+
     @Override
     @PreAuthorize("hasAuthority('ROLE_USER')")
-    public ResponseEntity<CreateRoadmapResponse> createRoadmap(CreateRoadmapDetail createRoadmapDetail, String token) {
+    public ResponseEntity<RoadmapResponse> createRoadmap(String authToken, CreateRoadmapDetail createRoadmapDetail) {
 
-        String userName= authUtil.getUserFromToken(token);
+        String userName= authenticationUtil.getUserFromToken(authToken);
         return ResponseEntity.ok(roadmapService.createRoadmap(userName, createRoadmapDetail));
     }
 
     @Override
     @PreAuthorize("hasAuthority('ROLE_USER')")
-    public ResponseEntity<List<CreateRoadmapResponse>> getRoadMaps(String token) {
-        String userName= authUtil.getUserFromToken(token);
-         return ResponseEntity.ok(roadmapService.listRoadmap(userName));
+    public ResponseEntity<List<RoadmapResponse>> getRoadMaps(String authToken) {
+
+        String userName= authenticationUtil.getUserFromToken(authToken);
+        return ResponseEntity.ok(roadmapService.listRoadmap(userName));
 
     }
 
     @Override
-    public ResponseEntity<CreateRoadmapResponse> getRoadMap(String roadmapId) {
+    public ResponseEntity<RoadmapResponse> getRoadMap(String roadmapId) {
         return ResponseEntity.ok(roadmapService.getRoadMap(roadmapId));
     }
 
     @Override
     @PreAuthorize("hasAuthority('ROLE_USER')")
-    public ResponseEntity<CreateRoadmapResponse> updateRoadmap(String roadmapId, UpdateRoadmapDetail updataRoadmapDetail) {
+    public ResponseEntity<RoadmapResponse> updateRoadmap(String roadmapId, UpdateRoadmapDetail updataRoadmapDetail) {
         return ResponseEntity.ok(roadmapService.updateRoadmap(roadmapId, updataRoadmapDetail));
     }
 
     @Override
     @PreAuthorize("hasAuthority('ROLE_USER')")
-    public ResponseEntity<CreateRoadmapResponse> enableShareLink(String roadmapId) {
+    public ResponseEntity<RoadmapResponse> enableShareLink(String roadmapId) {
         return ResponseEntity.ok(roadmapService.enableShareLink(roadmapId));
     }
 
     @Override
     @PreAuthorize("hasAuthority('ROLE_USER')")
-    public ResponseEntity<CreateRoadmapResponse> disableShareLink(String roadmapId) {
+    public ResponseEntity<RoadmapResponse> disableShareLink(String roadmapId) {
         return ResponseEntity.ok(roadmapService.disableShareLink(roadmapId));
     }
 }
